# app/Http/Controllers/Api/Admin/AuthController.php
@@ -1,225 +1,0 @@
-<?php
-
-namespace App\Http\Controllers\Api\Admin;
-
-use App\Http\Controllers\Controller;
-use App\Models\User;
-use Exception;
-use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Auth;
-use Illuminate\Support\Facades\Hash;
-use Illuminate\Support\Facades\Validator;
-
-class AuthController extends Controller
-{
-    /**
-     * @OA\Post(
-     * path="/api/register",
-     * operationId="Register",
-     * tags={"Admin"},
-     * summary="User Register",
-     * description="User Register here",
-     *     @OA\RequestBody(
-     *         @OA\JsonContent(),
-     *         @OA\MediaType(
-     *            mediaType="multipart/form-data",
-     *            @OA\Schema(
-     *               type="object",
-     *               required={"name","email", "password", "password_confirmation"},
-     *               @OA\Property(property="name", type="text", example="Mostafijur"),
-     *               @OA\Property(property="email", type="text", example="mostafijur@gmail.com"),
-     *               @OA\Property(property="password", type="password", example="123456"),
-     *               @OA\Property(property="password_confirmation", type="password", example="123456")
-     *            ),
-     *        ),
-     *    ),
-     *      @OA\Response(
-     *          response=201,
-     *          description="Register Successfully",
-     *          @OA\JsonContent()
-     *       ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Register Successfully",
-     *          @OA\JsonContent()
-     *       ),
-     *      @OA\Response(
-     *          response=422,
-     *          description="Unprocessable Entity",
-     *          @OA\JsonContent()
-     *       ),
-     *      @OA\Response(response=400, description="Bad request"),
-     *      @OA\Response(response=404, description="Resource Not Found"),
-     * )
-     */
-
-    public function create(Request $request)
-    {
-        try {
-            //Validated
-            $validateUser = Validator::make(
-                $request->all(),
-                [
-                    'name' => 'required',
-                    'email' => 'required|email|unique:users,email',
-                    'password' => 'required'
-                ]
-            );
-
-            if ($validateUser->fails()) {
-                return response()->json([
-                    'status' => false,
-                    'message' => 'validation error',
-                    'errors' => $validateUser->errors()
-                ], 401);
-            }
-
-            $user = User::create([
-                'name' => $request->name,
-                'email' => $request->email,
-                'password' => Hash::make($request->password)
-            ]);
-
-            return response()->json([
-                'status' => true,
-                'message' => 'User Created Successfully',
-                'token' => $user->createToken("API TOKEN")->plainTextToken
-            ], 200);
-        } catch (\Throwable $th) {
-            return response()->json([
-                'status' => false,
-                'message' => $th->getMessage()
-            ], 500);
-        }
-    }
-
-    /**
-     * @OA\Post(
-     *     path="/api/login",
-     *     operationId="Login",
-     *     tags={"Admin"},
-     *     summary="User Login",
-     *     description="User Login here",
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\MediaType(
-     *            mediaType="multipart/form-data",
-     *            @OA\Schema(
-     *               type="object",
-     *               required={"email", "password"},
-     *               @OA\Property(property="email", type="string", example="m@gmail.com"),
-     *               @OA\Property(property="password", type="string", example="12345678"),
-     *            ),
-     *        ),
-     *        @OA\MediaType(
-     *            mediaType="application/json",
-     *            @OA\Schema(
-     *               type="object",
-     *               required={"email", "password"},
-     *               @OA\Property(property="email", type="string", example="m@gmail.com"),
-     *               @OA\Property(property="password", type="string", example="12345678"),
-     *            ),
-     *        ),
-     *    ),
-     *    @OA\Response(
-     *        response=201,
-     *        description="Login Successfully",
-     *        @OA\JsonContent()
-     *    ),
-     *    @OA\Response(
-     *        response=200,
-     *        description="Login Successfully",
-     *        @OA\JsonContent()
-     *    ),
-     *    @OA\Response(
-     *        response=422,
-     *        description="Unprocessable Entity",
-     *        @OA\JsonContent()
-     *    ),
-     *    @OA\Response(response=400, description="Bad request"),
-     *    @OA\Response(response=404, description="Resource Not Found"),
-     * )
-     */
-
-    public function login(Request $request)
-    {
-        try {
-            $validateUser = Validator::make(
-                $request->all(),
-                [
-                    'email' => 'required|email',
-                    'password' => 'required'
-                ]
-            );
-
-            if ($validateUser->fails()) {
-                return response()->json([
-                    'status' => false,
-                    'message' => 'validation error',
-                    'errors' => $validateUser->errors()
-                ], 401);
-            }
-
-            if (!Auth::attempt($request->only(['email', 'password']))) {
-                return response()->json([
-                    'status' => false,
-                    'message' => 'Email & Password does not match with our record.',
-                ], 401);
-            }
-
-            $user = User::where('email', $request->email)->first();
-
-            return response()->json([
-                'status' => true,
-                'message' => 'User Logged In Successfully',
-                'token' => $user->createToken("API TOKEN")->plainTextToken
-            ], 200);
-        } catch (\Throwable $th) {
-            return response()->json([
-                'status' => false,
-                'message' => $th->getMessage()
-            ], 500);
-        }
-    }
-
-    /**
-     * @OA\Get(
-     *      path="/api/profile",
-     *      operationId="getUserl",
-     *      tags={"Admin"},
-     *      summary="Get list of projects",
-     *      security={{"bearer":{}}},
-     *      description="Returns list of projects",
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *          @OA\JsonContent()
-     *       ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Unauthenticated",
-     *      ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *     )
-     * 
-     */
-    public function profile()
-    {
-        try {
-            return response()->json([
-                'status' => true,
-                'message' => 'User profile data !',
-                'data' => Auth::guard()->user()
-            ], 200);
-        } catch (Exception $exception) {
-            return response()->json([
-                'status' => false,
-                'message' => $exception->getMessage(),
-                'data' => []
-            ], 200);
-        }
-    }
-}
